# aws-inventory

./: .gitignore  Dockerfile  LICENSE  README.md  config.yaml  inventory.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: config.py  models.py  session.py
docs/: architecture.md  configuration.md  faq.md  iam-policy.json  troubleshooting.md
exporters/: csv_exporter.py  excel_exporter.py  html_exporter.py  json_exporter.py  report_exporter.py
reports/: cost.py  security.py
scanners/: ec2.py
tests/: test_inventory.py  test_new_scanners.py
