[project]
name = "aws-inventory-pro"
version = "0.1.0"
description = "Enterprise AWS inventory, reporting, and security analysis CLI"
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.39.0",
  "botocore>=1.39.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "rich>=14.0.0",
  "PyYAML>=6.0",
  "jinja2>=3.1.0",
  "plotly>=5.18.0",
  "typer>=0.12.0",
  "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
